Issue #4947: The write() method of sys.stdout and sys.stderr uses their encoding and errors attributes instead of using utf-8 in strict mode, to get the same behaviour than the print statement.